# RF3esp32-Code-

./: .gitattributes  .gitignore  CMakeLists.txt  InstallationLog.txt  README.md  partitions.csv  partitions_4mb.csv  platformio.ini  sdkconfig.defaults  sdkconfig.devboard  sdkconfig.devboard.defaults  sdkconfig.esp32wroom32d_devboard  sdkconfig.featheresp32
boards/: esp32wroom32d_4mb.json  esp32wroom32d_n16.json  featheresp32_n16.json
data/: README.md  song.u8  speech_test.u8
include/: audio_packet.hpp  audio_reassembler.hpp  esp32_nrf24_hal.hpp  frame_io.hpp  morse.hpp  nrf24.hpp  nrf24_hal.hpp  radio_manager.hpp  stream_sync.hpp  validation.hpp  wifi_control_config.hpp
src/: CMakeLists.txt  audio_packet.cpp  audio_reassembler.cpp  esp32_nrf24_hal.cpp  frame_io.cpp  main.cpp  morse.cpp  nrf24.cpp  radio_manager.cpp  validation.cpp
test/include/: fake_hal.hpp
test/test_nrf24/: test_main.cpp
tools/: platformio_audio_targets.py  prepare_demo_audio.py  stage_demo_file.py
