idf_component_register(
    SRCS
        "main.cpp"
        "audio_packet.cpp"
        "audio_reassembler.cpp"
        "esp32_nrf24_hal.cpp"
        "nrf24.cpp"
        "radio_manager.cpp"
        "morse.cpp"
        "frame_io.cpp"
        "validation.cpp"
    INCLUDE_DIRS
        "."
        "../include"
    PRIV_REQUIRES
        spiffs
)
